# Helium

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_jobs_table.py
backend/app/: config.py  main.py
backend/app/api/routes/: artifacts.py  jobs.py  upload.py
backend/app/db/: __init__.py  conversion.py  engine.py  models.py  repository.py
backend/app/models/: job.py
backend/app/pipeline/: runner.py
backend/app/pipeline/stages/: features.py  matching.py  sfm.py
backend/app/services/: job_service.py  upload_service.py
backend/app/storage/: local.py
backend/tests/: conftest.py  test_extract.py  test_metrics.py  test_pipeline.py  test_separate.py  test_upload.py
helium/: config.py
helium/benchmarks/: __init__.py  cli.py  runner.py
helium/benchmarks/datasets/: __init__.py  base.py  libri2mix.py  voxceleb.py  whamr.py
helium/cli/: main.py  shell.py
helium/metrics/: __init__.py  _audio.py  content.py  diarization.py  separation.py  speaker_sim.py
helium/models/: job.py
helium/pipeline/: runner.py
helium/pipeline/stages/: convert.py  dense.py  diarize.py  evaluate.py  export.py  extract.py  features.py  matching.py  separate.py  sfm.py  validate.py
helium/storage/: local.py
infra/: alb.tf  cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  vpc.tf
scripts/: compute_metrics.py  run_benchmark.py  run_pipeline.py
