[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helium-3d"
version = "0.1.0"
description = "Local-first photo-to-3D object reconstruction"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # open3d and trimesh are optional: large binaries, not required for feature extraction
    # install with: pip install helium-3d[full]
]

[project.optional-dependencies]
full = [
    "open3d>=0.18.0",
    "trimesh>=4.3.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
helium = "helium.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["helium*"]
