[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helium-speech"
version = "0.1.0"
description = "Local-first speech research scaffold for diarization, separation, and voice conversion"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
research = [
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "pyannote.audio>=3.3.0",   # speaker diarization (requires HELIUM_HF_TOKEN + model acceptance)
    "speechbrain>=1.0.0",      # SepFormer speech source separation
]
# Optional backends that activate specific metric functions
metrics = [
    "scipy>=1.12.0",            # optimal speaker assignment in DER (falls back to greedy)
    "resemblyzer>=0.1.4",       # speaker similarity via d-vectors
    "faster-whisper>=1.0.0",    # WER via ASR (lighter than openai-whisper)
]
dev = [
    "pytest>=8.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["helium*"]
